# MortalKombat

./: .gitignore  CMakeLists.txt  README.md  configuracion.json
resources/: EscenarioDefault.json  EscenarioDefault.json~
resources/menus/seleccion_personajes/: background.psd
src/: Common.h  Constants.h  Game.cpp  Game.h  GameUtils.h  Musica.cpp  Musica.h  Posicion.cpp  Posicion.h  main.cpp
src/controlador/: Controlador.cpp  Controlador.h  ControladorJoystick.cpp  ControladorJoystick.h  ControladorMouse.cpp  ControladorMouse.h  ControladorTeclado.cpp  ControladorTeclado.h  ControladorTexto.cpp  ControladorTexto.h
src/modelo/: Accion.cpp  Accion.h  Accionador.cpp  Accionador.h  Colisionador.cpp  Colisionador.h  Combo.cpp  Combo.h  CreadorDeGolpes.cpp  CreadorDeGolpes.h  DetectorDeColisiones.cpp  DetectorDeColisiones.h  Direccion.cpp  Direccion.h  Estado.cpp  Estado.h  Golpe.cpp  Golpe.h  InteligenciaArtificial.cpp  InteligenciaArtificial.h  MenuGameMode.cpp  MenuGameMode.h  Mundo.cpp  Mundo.h  ObjetoColisionable.h  Orientacion.cpp  Orientacion.h  Personaje.cpp  Personaje.h  Poder.cpp  Poder.h  Posicion.cpp  Posicion.h  main.cpp
src/modelo/acciones/: Agachar.cpp  Agachar.h  Avanzar.cpp  Avanzar.h  Caminar.cpp  Caminar.h  Espejar.cpp  Espejar.h  Retroceder.cpp  Retroceder.h  SaltoOblicuo.cpp  SaltoOblicuo.h  SaltoVertical.cpp  SaltoVertical.h
src/modelo/menu/: MenuGameMode.cpp  MenuGameMode.h  MenuPlayerSelection.cpp  MenuPlayerSelection.h  MenuPlayers.cpp  MenuPlayers.h
src/parser/: EscenarioDefault.json  EscenarioDefault.json~  config.cpp  config.h  main.cpp
src/parser/log/: DebugLog.cpp  DebugLog.h  ErrorLog.cpp  ErrorLog.h  Log.h  WarningLog.cpp  WarningLog.h
src/utils/: Common.h  GameUtils.h  PersonajeUtils.h
src/vista/: Capa.cpp  Capa.h  CapaInfo.cpp  CapaInfo.h  Pantalla.cpp  Pantalla.h  Sprite.cpp  Sprite.h  VistaUtils.cpp  VistaUtils.h
src/vista/capas/: Capa.h  CapaInfo.cpp  CapaInfo.h  CapaInfoArcade.cpp  CapaInfoArcade.h  CapaInfoPractice.cpp  CapaInfoPractice.h
src/vista/pantallas/: MenuModoJuego.cpp  MenuModoJuego.h  Pantalla.cpp  Pantalla.h  PantallaArcade.cpp  PantallaArcade.h  PantallaFight.cpp  PantallaFight.h  PantallaMenuModoJuego.h  PantallaMultiplayer.cpp  PantallaMultiplayer.h  PantallaPractice.cpp  PantallaPractice.h
src/vista/pantallas/menu/: PantallaMenuModoJuego.cpp  PantallaMenuModoJuego.h  PantallaMenuPlayers.cpp  PantallaMenuPlayers.h
src/vista/personajes/: Personaje.cpp  Personaje.h  PersonajeFactory.cpp  PersonajeFactory.h  PersonajeVista.cpp  PersonajeVista.h  PoderVista.cpp  PoderVista.h  Sprite.cpp  Sprite.h
